[gd_scene load_steps=3 format=3 uid="uid://ca4nsesn2ilu7"]

[ext_resource type="Script" uid="uid://bxdmhbrefaae4" path="res://multiplayer_controller.gd" id="1_luirv"]
[ext_resource type="PackedScene" uid="uid://xv1k3wuhqavi" path="res://World.tscn" id="2_qgtrb"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_luirv")
gameScene = ExtResource("2_qgtrb")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_top = 312.0
offset_right = 1152.0
offset_bottom = 335.0

[node name="Members" type="Label" parent="."]
layout_mode = 2
offset_top = 312.0
offset_right = 1152.0
offset_bottom = 335.0
text = "-"

[node name="LobbiesPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
offset_left = 902.0
offset_top = 199.0
offset_right = 1152.0
offset_bottom = 449.0
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="ScrollContainer" type="ScrollContainer" parent="LobbiesPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LobbiesList" type="VBoxContainer" parent="LobbiesPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(350, 450)
layout_mode = 2
offset_left = 401.0
offset_top = 99.0
offset_right = 751.0
offset_bottom = 549.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
current_tab = 1

[node name="LAN" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="Space2" type="Control" parent="VBoxContainer/TabContainer/LAN"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2

[node name="ip" type="LineEdit" parent="VBoxContainer/TabContainer/LAN"]
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "ip"

[node name="port" type="LineEdit" parent="VBoxContainer/TabContainer/LAN"]
layout_mode = 2
text = "8910"
placeholder_text = "port"

[node name="Space" type="Control" parent="VBoxContainer/TabContainer/LAN"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2

[node name="Host" type="Button" parent="VBoxContainer/TabContainer/LAN"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Host"

[node name="connect" type="Button" parent="VBoxContainer/TabContainer/LAN"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Connect"

[node name="Steam" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="Space" type="Control" parent="VBoxContainer/TabContainer/Steam"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2

[node name="create_lobby" type="Button" parent="VBoxContainer/TabContainer/Steam"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Host"

[node name="show_lobbies" type="Button" parent="VBoxContainer/TabContainer/Steam"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Lobbies"

[node name="LobbyView" type="HFlowContainer" parent="VBoxContainer/TabContainer/Steam"]
visible = false
layout_mode = 2

[node name="Lobby" type="Panel" parent="VBoxContainer/TabContainer/Steam/LobbyView"]
clip_contents = true
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
size_flags_horizontal = 3

[node name="VFlowContainer" type="VFlowContainer" parent="VBoxContainer/TabContainer/Steam/LobbyView/Lobby"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = 16.0
offset_right = -27.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="Invite Friends" type="Button" parent="VBoxContainer/TabContainer/Steam/LobbyView"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Open Friends"

[node name="Start" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
disabled = true
text = "Start"

[connection signal="button_down" from="VBoxContainer/TabContainer/LAN/Host" to="." method="host_enet"]
[connection signal="button_down" from="VBoxContainer/TabContainer/LAN/connect" to="." method="join_enet"]
[connection signal="button_down" from="VBoxContainer/TabContainer/Steam/create_lobby" to="." method="create_steam_socket"]
[connection signal="button_down" from="VBoxContainer/TabContainer/Steam/show_lobbies" to="." method="_on_show_lobbies_pressed"]
[connection signal="button_down" from="VBoxContainer/TabContainer/Steam/LobbyView/Invite Friends" to="." method="_on_friends_button_pressed"]
[connection signal="button_down" from="VBoxContainer/Start" to="." method="_on_start_button_down"]
